[Issue 1172] Assign Project to User : combobox could be too wide

--- a/core/core.web/src/main/webapp/styles/structure.css
+++ b/core/core.web/src/main/webapp/styles/structure.css
@@ -895,6 +895,10 @@ div#user-account-password-panel > div > * {
 /* ------------------------------------------ */
 /* -------------->>> MISC <<<---------------- */
 /* ------------------------------------------ */
+ select option,  select  {
+    max-width:400px;
+}
+
 .error-message{
 	 color: #99352B;
 	}
